# create-comit-app

./: .gitignore  .mergify.yml  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASING.md  bors.toml  build.rs  rustfmt.toml
.circleci/: config.yml
.dependabot/: config.yml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: CI.yml  release-bin.yml  release.yml  stale.yml  zenhub-pr-issue-link.yml
.npm/: .gitignore  README.md  cca.js  download.js  execute.js  main.js  makeArchiveName.js  new.js  package.json  printArchiveName.js  scripts.js  startEnv.js
comit-scripts/erc20_token/: package.json
comit-scripts/src/: lib.rs  print_progress.rs  temp_fs.rs
comit-scripts/src/docker/: bitcoin.rs  free_local_port.rs
comit-scripts/src/env/: start.rs
common/: .gitignore  download.ts  execute.ts  index.ts  make_archive_name.ts  package.json  tsconfig.json  tslint.json
create/: CHANGELOG.md  Cargo.toml  build.rs
create/new_project/: README.md  package.json
create/new_project/demos/btc_eth/: package.json
create/new_project/demos/btc_eth/src/: index.ts
create/new_project/demos/erc20_btc/: package.json
create/new_project/demos/erc20_btc/src/: index.ts
create/new_project/examples/btc_eth/: README.md  package.json
create/new_project/examples/btc_eth/src/: lib.ts  maker.ts  taker.ts
create/new_project/examples/erc20_btc/: package.json
create/new_project/examples/erc20_btc/src/: index.ts
create/new_project/examples/separate_apps/: README.md  package.json
create/new_project/examples/separate_apps/src/: lib.ts  maker.ts
create/new_project/src/: index.js
create/npm/: README.md  download.js  download.ts  execute.js  main.js  main.ts  make_archive_name.ts  package.json  print_archive_name.ts
create/src/: lib.rs  main.rs  new.rs
create/tests/: btc_eth.sh  force_clean_env.sh  new.sh  run_demo.sh  run_example.sh
create/tests/demos/: btc_eth.sh  erc20_btc.sh
erc20_token/: compile.sh
new_project/: README.md  package.json
new_project/examples/: README.md
new_project/examples/btc-eth/: README.md  package.json  tsconfig.json
new_project/examples/btc-eth/src/: helloSwap.ts  index.ts  orderBook.ts
new_project/examples/btc-eth/tests/: orderBook.spec.ts
new_project/examples/btc_eth/: .gitignore  README.md  package.json
new_project/examples/btc_eth/src/: index.ts
new_project/examples/erc20-btc/: package.json
new_project/examples/erc20-btc/src/: index.ts  logger.ts
new_project/examples/erc20_btc/: README.md  package.json  tsconfig.json  tslint.json
new_project/examples/erc20_btc/src/: index.ts
new_project/examples/separate_apps/: README.md  package.json
new_project/examples/separate_apps/src/: lib.ts  maker.ts  negotiation.ts  taker.ts
new_project/examples/separate_apps_testnet/: .gitignore  README.md  env  package.json  tsconfig.json
new_project/examples/separate_apps_testnet/maker/: maker_config.toml  seed.pem
new_project/examples/separate_apps_testnet/src/: bcoinWallet.ts  lib.ts  maker.ts  negotiation.ts  taker.ts
new_project/examples/separate_apps_testnet/taker/: seed.pem  taker_config.toml
new_project/examples/separate_apps_testnet/types/blgr/: index.d.ts
new_project/src/: index.js
scripts/: CHANGELOG.md  Cargo.toml
scripts/erc20_token/: truffle-config.js
scripts/erc20_token/contracts/: Token.sol
scripts/npm/: .gitignore  README.md  download.js  download.ts  execute.ts  main.js  main.ts  makeArchiveName.js  make_archive_name.ts  package.json  print_archive_name.ts  tsconfig.json  tslint.json
scripts/src/: config.rs  create_comit_app.rs  lib.rs  main.rs
scripts/src/docker/: bitcoin.rs  cnd.rs  ethereum.rs  mod.rs
scripts/src/env/: mod.rs  start.rs
scripts/tests/: force_clean_env.sh  start_env.sh
src/: bitcoin.rs  btsieve.rs  cnd.rs  cnd_settings.rs  create_comit_app.rs  env_file.rs  ethereum.rs  lib.rs  main.rs  new.rs  print_progress.rs  property_based.rs  start_env.rs  temp_fs.rs
src/comit_rs_settings/: btsieve.rs  cnd.rs  mod.rs
src/docker/: bitcoin.rs  bitcoin_network_message_codec.rs  btsieve.rs  cnd.rs  ethereum.rs  free_local_port.rs  mod.rs
src/docker/blockchain/: bitcoin.rs  ethereum.rs  mod.rs
src/env/: clean_up.rs  mod.rs  start.rs  temp_fs.rs
src/executable/: btsieve.rs  cnd.rs  mod.rs
src/start_env/: clean_up.rs  mod.rs  path.rs  start.rs  temp_fs.rs
tests/: btc_eth.sh  force_clean_env.sh  new.sh  run_example.sh  start_env.sh
