[package]
name = "create-comit-app"
version = "0.5.1"
authors = ["CoBloX developers <team@coblox.tech>"]
edition = "2018"

[dependencies]
anyhow = "1.0.26"
clarity = "0.1"
derive_more = "0.99.2"
dirs = "2"
envfile = "0.2"
flate2 = "1.0.13"
futures = { version = "0.3", features = ["compat"] }
futures_01 = { package = "futures", version = "0.1" }
hex = "0.4.0"
hex-literal = "0.2.1"
hex-serde = "0.1.0"
http = "0.1"
lazy_static = "1.4"
num256 = "0.2"
reqwest = { version = "0.9", default-features = false }
rust_bitcoin = { version = "0.19.1", package = "bitcoin", features = ["use-serde"] }
secp256k1 = { version = "0.12", features = ["rand"] }
serde = "1"
serde_json = "1"
shiplift = { version = "0.6", default-features = false }
structopt = "0.3"
tar = "0.4"
tempfile = "3.1.0"
thiserror = "1"
tokio = { version = "0.2", features = ["rt-core", "time", "tcp", "signal", "fs", "io-util"] }
tokio-compat = "0.1"
toml = "0.5"
web3 = { version = "0.8", default-features = false, features = ["http"] }

[features]
default = ["unix"]
unix = ["shiplift/unix-socket"]
windows = ["shiplift/vendored-ssl"]

[build-dependencies]
anyhow = "1.0.26"
flate2 = "1.0.13"
ignore = "0.4.10"
tar = "0.4.26"

