[package]
name = "create-comit-app"
version = "0.9.0"
authors = ["CoBloX developers <team@coblox.tech>"]
edition = "2018"

[dependencies]
flate2 = "1.0.14"
structopt = "0.3"
tar = "0.4"
tokio = { version = "0.2", features = ["fs", "io-util"] }
tokio-compat = "0.1"

[build-dependencies]
anyhow = "1.0.27"
flate2 = "1.0.14"
ignore = "0.4.12"
tar = "0.4.26"

# This is just so that the same build flags can be passed in either crates
[features]
unix = []
windows = []
