[package]
name = "comit-scripts"
version = "0.8.3"
authors = ["CoBloX developers <team@coblox.tech>"]
edition = "2018"

[dependencies]
anyhow = "1.0.33"
clarity = "0.3"
derive_more = "0.99.11"
dirs = "3"
envfile = "0.2"
futures = { version = "0.3", features = ["compat"] }
futures_01 = { package = "futures", version = "0.1" }
hex = "0.4.2"
hex-literal = "0.3.1"
http = "0.1"
lazy_static = "1.4"
num256 = "0.2"
reqwest = { version = "0.10", default-features = false, features = ["json"] }
rust_bitcoin = { version = "0.19.1", package = "bitcoin", features = ["use-serde"] }
secp256k1 = { version = "0.12", features = ["rand"] }
serde = "1"
serde_derive = "1.0"
serde_json = "1"
shiplift = { version = "0.6", default-features = false }
structopt = "0.3"
tempfile = "3.1.0"
thiserror = "1"
tokio = { version = "0.2", features = ["fs", "rt-core", "time", "tcp", "signal"] }
tokio-compat = "0.1"
toml = "0.5"
web3 = { version = "0.13", default-features = false, features = ["http"] }

[features]
default = ["unix"]
unix = ["shiplift/unix-socket"]
windows = ["shiplift/vendored-ssl"]
